--- a/src/options/guide.html
+++ b/src/options/guide.html
@@ -116,6 +116,9 @@
       <h2>Shortcuts</h2>
       <ul>
         <li><strong>Alt + Shift + A:</strong> Toggle between <strong>Off</strong> and <strong>Annotate</strong>.</li>
+        <li><strong>Alt + B:</strong> Switch to <strong>Browse</strong> (when extension is on).</li>
+        <li><strong>Alt + A:</strong> Switch to <strong>Annotate</strong> (when extension is on).</li>
+        <li><strong>Alt + C:</strong> Switch to <strong>Capture</strong> (when extension is on).</li>
         <li><strong>Esc</strong> in <strong>Annotate</strong>: switch to <strong>Browse</strong>.</li>
         <li><strong>Esc</strong> in <strong>Capture</strong>: cancel capture and return to <strong>Annotate</strong>.</li>
       </ul>
